Home/notes/Docker/nzb_docker_stack_issues.txt
Content-Type: text/x-zim-wiki
Wiki-Format: zim 0.6
Creation-Date: 2020-10-27T14:34:03-04:00

====== nzb docker stack issues ======
//^{Tuesday 27 October 2020}//
@docker @helpdesk

{{{code: lang="sh" linenumbers="False"
/tmp/pear/temp/imagick/imagick_helpers.c: In function 'php_imagick_progress_monitor_callable':
/tmp/pear/temp/imagick/imagick_helpers.c:96:6: error: 'zend_fcall_info' {aka 'struct _zend_fcall_info'} has no member named 'function_table'; did you mean 'function_name'?
   96 |  fci.function_table = EG(function_table);
      |      ^~~~~~~~~~~~~~
      |      function_name
/tmp/pear/temp/imagick/imagick_helpers.c:111:5: error: 'zend_fcall_info' {aka 'struct _zend_fcall_info'} has no member named 'symbol_table'
  111 |  fci.symbol_table = NULL;
      |     ^
make: *** [Makefile:204: imagick_helpers.lo] Error 1
ERROR: `make' failed
ERROR: Service 'nzedb' failed to build : The command '/bin/sh -c pecl install imagick-3.4.1' returned a non-zero code: 1

}}}


resolved with bumping imagick version to 3.4.4

--------------------


{{{code: lang="sh" linenumbers="False"
Step 31/35 : RUN   cd /var/www/nZEDb &&   composer install --prefer-source
 ---> Running in a9d8ba960bae
Installing dependencies from lock file (including require-dev)
Verifying lock file contents can be installed on current platform.
Your lock file does not contain a compatible set of packages. Please run composer update.

  Problem 1
    - Root composer.json requires PHP extension ext-session * but it is missing from your system. Install or enable PHP's session extension.
  Problem 2
    - Root composer.json requires PHP extension ext-simplexml * but it is missing from your system. Install or enable PHP's simplexml extension.
  Problem 3
    - Root composer.json requires PHP extension ext-xmlwriter * but it is missing from your system. Install or enable PHP's xmlwriter extension.
  Problem 4
    - Root composer.json requires composer-plugin-api ^1.0.0, found composer-plugin-api[2.0.0] but it does not match the constraint.
  Problem 5
    - composer/installers is locked to version v1.7.0 and an update of this package was not requested.
    - composer/installers v1.7.0 requires composer-plugin-api ^1.0 -> found composer-plugin-api[2.0.0] but it does not match the constraint.
  Problem 6
    - fxp/composer-asset-plugin is locked to version v1.4.4 and an update of this package was not requested.
    - fxp/composer-asset-plugin v1.4.4 requires composer-plugin-api ^1.0 -> found composer-plugin-api[2.0.0] but it does not match the constraint.
  Problem 7
    - composer/installers v1.7.0 requires composer-plugin-api ^1.0 -> found composer-plugin-api[2.0.0] but it does not match the constraint.
    - unionofrad/manual v1.0.0 requires composer/installers * -> satisfiable by composer/installers[v1.7.0].
    - unionofrad/manual is locked to version v1.0.0 and an update of this package was not requested.

To enable extensions, verify that they are enabled in your .ini files:
    - /etc/php7/php.ini
    - /etc/php7/conf.d/00_ctype.ini
    - /etc/php7/conf.d/00_curl.ini
    - /etc/php7/conf.d/00_gd.ini
    - /etc/php7/conf.d/00_iconv.ini
    - /etc/php7/conf.d/00_json.ini
    - /etc/php7/conf.d/00_mbstring.ini
    - /etc/php7/conf.d/00_openssl.ini
    - /etc/php7/conf.d/00_pcntl.ini
    - /etc/php7/conf.d/00_pdo.ini
    - /etc/php7/conf.d/00_sockets.ini
    - /etc/php7/conf.d/00_xml.ini
    - /etc/php7/conf.d/01_exif.ini
    - /etc/php7/conf.d/01_mysqlnd.ini
    - /etc/php7/conf.d/01_phar.ini
    - /etc/php7/conf.d/02_pdo_mysql.ini
    - /etc/php7/conf.d/mcrypt.ini
You can also run `php --ini` inside terminal to see which files are used by PHP in CLI mode.

You are using Composer 2, which some of your plugins seem to be incompatible with. Make sure you update your plugins or report a plugin-issue to ask them to support Composer 2.
ERROR: Service 'nzedb' failed to build : The command '/bin/sh -c cd /var/www/nZEDb &&   composer install --prefer-source' returned a non-zero code: 2

}}}

